# django/accounts/serializers.py
@@ -2,12 +2,16 @@ from rest_framework import serializers
 from rest_framework.exceptions import ValidationError
 
 from django.contrib import auth
+from django.contrib.auth.forms import _unicode_ci_compare
+from django.core.exceptions import ValidationError as DjangoValidationError
+from django.db import transaction
 from django.utils.translation import gettext_lazy as _
 
+from . import email
 from . import models
 
 
-class UserReadOnlySerializer(serializers.ModelSerializer):
+class UserReadSerializer(serializers.ModelSerializer):
     class Meta:
         model = models.User
         fields = (
@@ -22,6 +26,32 @@ class UserReadOnlySerializer(serializers.ModelSerializer):
         read_only_fields = fields
 
 
+class UserCreateSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = models.User
+        fields = (
+            "password",
+            "username",
+            "first_name",
+            "last_name",
+            "email",
+        )
+
+    def save(self):
+        password = self.validated_data["password"]
+        with transaction.atomic():
+            instance = super().save()
+            try:
+                auth.password_validation.validate_password(password, instance)
+            except DjangoValidationError as e:
+                raise ValidationError({"password": e.messages})
+            instance.set_password(password)
+            instance.is_active = False
+            instance.save()
+            email.user_create(self.context["request"], instance)
+        return instance
+
+
 class UserUpdateSerializer(serializers.ModelSerializer):
     class Meta:
         model = models.User
@@ -32,14 +62,7 @@ class UserUpdateSerializer(serializers.ModelSerializer):
         )
 
 
-class EmailSerializer(serializers.Serializer):
-    email = serializers.EmailField(write_only=True)
-
-    def save(self):
-        return self.validated_data["email"]
-
-
-class NewPasswordSerializer(serializers.Serializer):
+class BaseNewPasswordSerializer(serializers.Serializer):
     new_password1 = serializers.CharField(
         max_length=128, required=True, write_only=True
     )
@@ -67,7 +90,7 @@ class NewPasswordSerializer(serializers.Serializer):
         return self.user_cache
 
 
-class PasswordChangeSerializer(NewPasswordSerializer):
+class PasswordChangeSerializer(BaseNewPasswordSerializer):
     old_password = serializers.CharField(
         max_length=128, required=True, write_only=True
     )
@@ -82,7 +105,25 @@ class PasswordChangeSerializer(NewPasswordSerializer):
         return value
 
 
-class PasswordResetSerializer(NewPasswordSerializer):
+class PasswordForgetSerializer(serializers.Serializer):
+    email = serializers.EmailField(write_only=True)
+
+    def __init__(self, request, *args, **kwargs):
+        self.request = request
+        super().__init__(**kwargs)
+
+    def save(self):
+        email_value = self.validated_data["email"]
+        for user in models.User.objects.filter(
+            email__iexact=email_value, is_active=True
+        ):
+            if user.has_usable_password() and _unicode_ci_compare(
+                email_value, user.email
+            ):
+                email.password_forget(self.request, user)
+
+
+class PasswordResetSerializer(BaseNewPasswordSerializer):
     uid = serializers.CharField(required=True, write_only=True)
     token = serializers.CharField(required=True, write_only=True)
 
